fixing dark background on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,7 +124,7 @@ RESPONSIVE
    .btn-subscribe{border-radius: 20px;}
    #contact-informations{margin-top: 24px;}
    body {
-    background-color: #2c3e50;
+    background-color: #fff;
    }
 }
 @media only screen and (max-width: 740px) {
